# -*- mode: org ; coding: utf-8-unix -*-
# last updated : 2018/04/27.10:47:02


#+TITLE:     ac-clang Changes Log
#+AUTHOR:    yaruopooner
#+EMAIL:     [https://github.com/yaruopooner]
#+OPTIONS:   author:nil timestamp:t |:t \n:t ^:nil


* 2.1.1
  - Refactoring
    Front-End code and IPC code were separated.
    - Front-End : ac-clang.el
      Provide feature is dependent on auto-complete implementation.
    - IPC       : clang-server.el
      Provide feature is not dependent on Front-End implementation.
  - Bugfix

* 2.1.0
  - Clang-6.0.0 support(clang-server only)
  - Optimization
    - Obsolete of suspend/resume feature.
      This feature became unnecessary by mmap invalidation patch.

* 2.0.2
  - Miscellaneous
    - Supressed server version report display when emacs lanch.

* 2.0.1
  - Optimization
    - Provide selectable quick help method.

* 2.0.0
  - Clang-5.0.0 support(clang-server only)
  - Many IPC features were added.
    - Transaction-Id for Command.
    - Packet encode/decode format S-Expression and Json.
    - Performance Profiler.
    - Supported Brief Comment
  - Bugfix

* 1.9.1
  - Bugfix

* 1.9.0
  - Clang-4.0.0 support(clang-server only)

* 1.8.0
  - Clang-3.9.0 support(clang-server only)

* 1.7.0
  - Clang-3.8.0 support(clang-server only)

* 1.6.0
  - Clang-3.7.0 support

* 1.5.0
  - Added new feature. Jump to inclusion file. return from jumped location.
  - Bugfix

* 1.4.0
  - Added recovery feature. When client reached IPC queue limit, it is recovered.

* 1.3.1
  - Modified delete logic for PCH.

* 1.3.0
  - Added dependency pos-tip package.

* 1.2.1
  - Bugfix

* 1.2.0
  - Refactoring
  - Clang-3.6.1 support

* 1.1.1
  - Bugfix

* 1.1.0
  - Clang-3.6.0 support

* 1.0.0
  - Clang-3.5.0 support