@@ -1,5 +1,5 @@
 # -*- mode: org ; coding: utf-8-unix -*-
-# last updated : 2018/04/27.10:47:02
+# last updated : 2018/05/17.13:41:09
 
 
 #+TITLE:     ac-clang Changes Log
@@ -15,6 +15,11 @@
       Provide feature is dependent on auto-complete implementation.
     - IPC       : clang-server.el
       Provide feature is not dependent on Front-End implementation.
+  - Optimization
+    - Added subprocess pipe buffer configuration.
+  - Miscellaneous
+    - Added minor-mode
+    - Improve usability of jump function.
   - Bugfix
 
 * 2.1.0
